deps/crates/vendor/anyhow/tests/ui/temporary-value.rs
use anyhow::anyhow;

fn main() {
    let _ = anyhow!(&String::new());
}
